--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <href=‘public_url’ />
+  <!-- <href=‘public_url’ /> -->
    <!-- Bootstrap setup -->
   <link 
     rel="stylesheet" 
