edit index file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta http-equiv="refresh" content="0; URL=/fetch_frontend_project/" />
   <!-- <href=‘public_url’ /> -->
    <!-- Bootstrap setup -->
   <link 
